--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     
     environment {
-    DOCKER_IMAGE = 'genai-agent'
+    DOCKER_IMAGE = 'dockerizzz/genai-agent'
     DOCKER_TAG = "${env.BUILD_NUMBER}"
     GEMINI_API_KEY = credentials('gemini-api-key')
 }
