--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,19 +2,23 @@ pipeline {
     agent any
     
     environment {
-    DOCKER_IMAGE = 'dockerizzz/genai-agent'
-    DOCKER_TAG = "${env.BUILD_NUMBER}"
-    GEMINI_API_KEY = credentials('gemini-api-key')
-}
+        DOCKER_IMAGE = 'dockerizzz/genai-agent'
+        DOCKER_TAG = "${env.BUILD_NUMBER}"
+        
+        // Credentials from Jenkins Credentials Manager
+        GEMINI_API_KEY = credentials('gemini-api-key')
+        ANTHROPIC_API_KEY = credentials('anthropic-api-key')
+    }
     
     stages {
+
         stage('Checkout') {
             steps {
                 echo 'Checking out code from GitHub...'
                 checkout scm
             }
         }
-        
+
         stage('Build Docker Image') {
             steps {
                 echo 'Building Docker image...'
@@ -26,80 +30,75 @@ pipeline {
                 }
             }
         }
-        
+
         stage('Test') {
             steps {
                 echo 'Running tests...'
                 script {
                     sh """
-                        # Run container for testing
+                        echo "Starting test container..."
                         docker run --rm -d --name test-container \
                             -p 5001:5000 \
                             -e ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY} \
                             ${DOCKER_IMAGE}:${DOCKER_TAG}
-                        
-                        # Wait for container to be ready
+
+                        echo "Waiting for service to start..."
                         sleep 10
-                        
-                        # Test health endpoint
+
+                        echo "Testing /health endpoint..."
                         curl -f http://localhost:5001/health || exit 1
-                        
-                        # Stop test container
+
                         docker stop test-container
                     """
                 }
             }
         }
-        
+
         stage('Deploy') {
             steps {
                 echo 'Deploying application...'
                 script {
                     sh """
-                        # Stop and remove old container if exists
                         docker stop genai-agent-app || true
                         docker rm genai-agent-app || true
-                        
-                        # Run new container
+
                         docker run -d --name genai-agent-app \
                             -p 5000:5000 \
                             -e ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY} \
                             --restart unless-stopped \
                             ${DOCKER_IMAGE}:latest
-                        
-                        # Verify deployment
+
                         sleep 5
                         curl -f http://localhost:5000/health
                     """
                 }
             }
         }
-        
+
         stage('Cleanup') {
             steps {
-                echo 'Cleaning up old images...'
+                echo 'Cleaning up old Docker images...'
                 script {
                     sh """
-                        # Keep only last 3 images
+                        # keep only last 3 build images
                         docker images ${DOCKER_IMAGE} --format '{{.Tag}}' | \
-                            grep -v latest | \
-                            tail -n +4 | \
-                            xargs -I {} docker rmi ${DOCKER_IMAGE}:{} || true
+                        grep -v latest | sort -n | head -n -3 | \
+                        xargs -r -I {} docker rmi ${DOCKER_IMAGE}:{}
                     """
                 }
             }
         }
     }
-    
+
     post {
         success {
-            echo 'Pipeline completed successfully!'
+            echo '🎉 Pipeline completed successfully!'
         }
         failure {
-            echo 'Pipeline failed!'
+            echo '❌ Pipeline failed!'
         }
         always {
-            echo 'Cleaning up workspace...'
+            echo '🧹 Cleaning workspace...'
             cleanWs()
         }
     }
